--- a/index.html
+++ b/index.html
@@ -23,40 +23,40 @@
 		</header>
 		<div class="container">
 			<div class="intro">
-				<p class="title">Ini adalah contoh Website Siswa</p>
+				<p class="title">Argantara Ramadhani Developer</p>
 				<p class="description">SMK PANCA BHAKTI RAKIT.</p>
 				<img src="assets/foto/argaa.png" alt="foto1" class="img-foto"/>
 			</div>
 		</div>
 		<div class="parallax">
 			<div class="tentang">
-				<p class="title">Saya Adalah NAMA KAMU</p>
+				<p class="title">Saya Adalah Ramadhani Wahyu Alif</p>
 				<p class="description">Sedang Praktek shared hosting Web (ASJ).</p>
 			</div>
 			<div class="container">
 					<div class="card" id="PROFIL">
 						<div class="card-item">
-							<p class="card-title">AGUS FAJAR HARDEKA</p>
+							<p class="card-title">RAMADHANI WAHYU ALIF</p>
 							<p class="card-description">diatas adalah nama lengkap saya.</p>
 						</div>
 						<div class="card-item">
-							<p class="card-title">GURU TJKT</p>
+							<p class="card-title">SISWA TJKT</p>
 							<p class="card-description">SMK PANCA BHAKTI RAKIT</p>
 						</div>
 						<div class="card-item">
 							<p class="card-title">ALAMAT</p>
-							<p class="card-description">Perum Griya Indah, Banjarmangu.</p>
+							<p class="card-description">Gemilang, Sambong, RT3/RW5, Punggelan, Banjarnegara.</p>
 						</div>
 					</div>
 			</div>
 		</div>
 		<footer>
-			<p class="title">&copy; TIM TJKT PABHARA 2022</p>
+			<p class="title">&copy; TIM TJKT PABHARA 2025</p>
 		</footer>
 		
 		<script>
 			function redirInstagram() {
-				window.location.href = "https://instagram.com/fajarhardeka"
+				window.location.href = "https://instagram.com/argantarasja_"
 			}
 			
 		</script>
