--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 					
 				</ul>
 			</nav>
-			<button class="btn-cta" onclick="redirInstagram()">Follow Saya</button>
+			<button class="btn-cta" onclick="redirInstagram()">Follow IG Saya</button>
+			<button class="btn-cta" onclick="redirTiktok()">Follow Tiktok Saya</button>
 		</header>
 		<div class="container">
 			<div class="intro">
@@ -57,6 +58,9 @@
 		<script>
 			function redirInstagram() {
 				window.location.href = "https://instagram.com/argantarasja_"
+			}
+			function redirTiktok() {
+				window.location.href = "https://www.tiktok.com/argantarasja_"
 			}
 			
 		</script>
