--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				window.location.href = "https://instagram.com/argantarasja_"
 			}
 			function redirTiktok() {
-				window.location.href = "https://www.tiktok.com/argantarasja_"
+				window.location.href = "https://www.tiktok.com/@argantarasja_"
 			}
 			
 		</script>
