--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<p class="card-title">ALAMAT</p>
 							<p class="card-description">Gemilang, Sambong, RT3/RW5, Punggelan, Banjarnegara.</p>
 						</div>
-						<div class="card-item">
+						<div class="card-itemCerita">
 							<p class="card-title">CERITA RANDOM</p>
 							<p class="card-description">Halo! Namaku Ramadhani Wahyu Alif, siswa kelas 12 TKJ 1 yang sedang menjelajahi dunia jaringan, router, dan semua hal rumit yang bikin pusing tapi seru. Aku mulai tertarik dengan dunia TKJ karena penasaran, kok bisa sih satu kabel bisa menghubungkan dunia? Eh, ternyata bukan cuma kabel, tapi konfigurasi dan otak-atik router juga jadi bagian penting. Dan jujur... aku suka banget yang kayak gitu.
 
