--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					
 				</ul>
 			</nav>
-			<button class="btn-cta" onclick="redirInstagram()">Follow IG Saya</button>
-			<button class="btn-cta" onclick="redirTiktok()">Follow Tiktok Saya</button>
+			<button class="btn-cta" onclick="redirInstagram()">Follow IG</button>
+			<button class="btn-cta" onclick="redirTiktok()">Follow Tiktok</button>
 		</header>
 		<div class="container">
 			<div class="intro">
