--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<link rel="icon" type="image/png" href="/assets/icon/clod.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Ramadhani Wahyu Alif-XII TKJ 1</title>
+		<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
