--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		</div>
 		<div class="parallax">
 			<div class="tentang">
-				<p class="title">Saya Adalah Ramadhani Wahyu Alif</p>
-				<p class="description">Sedang Praktek shared hosting Web (ASJ).</p>
+				<p class="title">Ramadhani Wahyu Alif</p>
+				<p class="description">Siswa Terkenal Pabhara</p>
 			</div>
 			<div class="container">
 					<div class="card" id="PROFIL">
