--- a/index.html
+++ b/index.html
@@ -1,79 +1,79 @@
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/png" href="/assets/icon/clod.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Ramadhani Wahyu Alif-XII TKJ 1</title>
-		<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="style.css"/>
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-				<img src="assets/icon/clod.png" alt="logo" class="logo-img" />
-				<h1 class="logo-title">Ramadhani Wahyu Alif</h1>
-			</div>
-			
-			<nav>
-				<ul>
-					<li><a href="#PROFIL">PROFIL</a></li>
-					
-				</ul>
-			</nav>
-			<button class="btn-cta" onclick="redirInstagram()">Follow IG</button>
-			<button class="btn-cta" onclick="redirTiktok()">Follow Tiktok</button>
-		</header>
-		<div class="container">
-			<div class="intro">
-				<p class="title">Argantara Ramadhani Developer</p>
-				<img src="assets/foto/argaa.png" alt="foto1" class="img-foto"/>
-			</div>
-		</div>
-		<div class="parallax">
-			<div class="tentang">
-				<p class="title">Ramadhani Wahyu Alif</p>
-			</div>
-			<div class="container">
-					<div class="card" id="PROFIL">
-						<div class="card-item">
-							<p class="card-title">RAMADHANI WAHYU ALIF</p>
-							<p class="card-description">diatas adalah nama lengkap saya.</p>
-						</div>
-						<div class="card-item">
-							<p class="card-title">SISWA TJKT</p>
-							<p class="card-description">SMK PANCA BHAKTI RAKIT</p>
-						</div>
-						<div class="card-item">
-							<p class="card-title">ALAMAT</p>
-							<p class="card-description">Gemilang, Sambong, RT3/RW5, Punggelan, Banjarnegara.</p>
-						</div>
-						<div class="card-itemCerita">
-							<p class="card-title">CERITA RANDOM</p>
-							<p class="card-description">Halo! Namaku Ramadhani Wahyu Alif, siswa kelas 12 TKJ 1 yang sedang menjelajahi dunia jaringan, router, dan semua hal rumit yang bikin pusing tapi seru. Aku mulai tertarik dengan dunia TKJ karena penasaran, kok bisa sih satu kabel bisa menghubungkan dunia? Eh, ternyata bukan cuma kabel, tapi konfigurasi dan otak-atik router juga jadi bagian penting. Dan jujur... aku suka banget yang kayak gitu.
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="/assets/icon/clod.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ramadhani Wahyu Alif-XII TKJ 1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="assets/icon/clod.png" alt="logo" class="logo-img" />
+        <h1 class="logo-title">Ramadhani Wahyu Alif</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#PROFIL">PROFIL</a></li>
+        </ul>
+      </nav>
+      <button class="btn-cta" onclick="redirInstagram()">Follow IG</button>
+      <button class="btn-cta" onclick="redirTiktok()">Follow Tiktok</button>
+    </header>
 
-Di luar itu, aku juga punya hobi belajar coding sedikit demi sedikit, kayak ngumpulin koin di game, pelan-pelan tapi pasti. Kadang kalau lagi suntuk ngoding, aku istirahat sambil menggambar wajah orang-orang yang menurutku berkesan, dalam gaya semi-realis. Buatku, itu cara lain mengabadikan momen dan orang yang pernah hadir di hidupku.
+    <div class="container">
+      <div class="intro">
+        <p class="title">Argantara Ramadhani Developer</p>
+        <img src="assets/foto/argaa.png" alt="foto1" class="img-foto"/>
+      </div>
+    </div>
 
-Oh iya, aku juga aktif di organisasi Pramuka sejak MI, SMP, sampai sekarang di SMK. Banyak nilai disiplin dan tanggung jawab yang aku bawa dari sana ke kehidupan sehari-hari, termasuk pas harus begadang konfigurasi router yang tiba-tiba error 😅
+    <div class="parallax">
+      <div class="tentang">
+        <p class="title">Ramadhani Wahyu Alif</p>
+      </div>
 
-Kalau ditanya pengalaman lucu selama sekolah, pasti ada aja! Apalagi kalau udah ngumpul sama teman-teman sekelas yang tingkahnya random banget. Ada aja yang bisa bikin ketawa, mulai dari iseng di kelas sampai drama rebutan kabel LAN.
+      <div class="container">
+        <div class="card" id="PROFIL">
+          <div class="card-item">
+            <p class="card-title">RAMADHANI WAHYU ALIF</p>
+            <p class="card-description">diatas adalah nama lengkap saya.</p>
+          </div>
+          <div class="card-item">
+            <p class="card-title">SISWA TJKT</p>
+            <p class="card-description">SMK PANCA BHAKTI RAKIT</p>
+          </div>
+          <div class="card-item">
+            <p class="card-title">ALAMAT</p>
+            <p class="card-description">Gemilang, Sambong, RT3/RW5, Punggelan, Banjarnegara.</p>
+          </div>
+          <div class="card-item card-itemCerita">
+            <p class="card-title">CERITA RANDOM</p>
+            <p class="card-description">
+              Halo! Namaku Ramadhani Wahyu Alif, siswa kelas 12 TKJ 1 yang sedang menjelajahi dunia jaringan, router, dan semua hal rumit yang bikin pusing tapi seru. Aku mulai tertarik dengan dunia TKJ karena penasaran, kok bisa sih satu kabel bisa menghubungkan dunia? Eh, ternyata bukan cuma kabel, tapi konfigurasi dan otak-atik router juga jadi bagian penting. Dan jujur... aku suka banget yang kayak gitu.<br><br>
+              Di luar itu, aku juga punya hobi belajar coding sedikit demi sedikit, kayak ngumpulin koin di game, pelan-pelan tapi pasti. Kadang kalau lagi suntuk ngoding, aku istirahat sambil menggambar wajah orang-orang yang menurutku berkesan, dalam gaya semi-realis. Buatku, itu cara lain mengabadikan momen dan orang yang pernah hadir di hidupku.<br><br>
+              Oh iya, aku juga aktif di organisasi Pramuka sejak MI, SMP, sampai sekarang di SMK. Banyak nilai disiplin dan tanggung jawab yang aku bawa dari sana ke kehidupan sehari-hari, termasuk pas harus begadang konfigurasi router yang tiba-tiba error 😅<br><br>
+              Kalau ditanya pengalaman lucu selama sekolah, pasti ada aja! Apalagi kalau udah ngumpul sama teman-teman sekelas yang tingkahnya random banget. Ada aja yang bisa bikin ketawa, mulai dari iseng di kelas sampai drama rebutan kabel LAN.<br><br>
+              Terus, soal cita-cita... jujur aja aku masih hilang arah. Tapi mungkin itu wajar. Aku percaya, selama terus belajar dan eksplorasi hal-hal yang aku suka, arah itu bakal muncul sendiri. Untuk sekarang, aku nikmati aja prosesnya.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-Terus, soal cita-cita... jujur aja aku masih hilang arah. Tapi mungkin itu wajar. Aku percaya, selama terus belajar dan eksplorasi hal-hal yang aku suka, arah itu bakal muncul sendiri. Untuk sekarang, aku nikmati aja prosesnya.</p>
-						</div>
-					</div>
-			</div>
-		</div>
-		<footer>
-			<p class="title">&copy; ARGANTARA PROJECT 2025</p>
-		</footer>
-		
-		<script>
-			function redirInstagram() {
-				window.location.href = "https://instagram.com/argantarasja_"
-			}
-			function redirTiktok() {
-				window.location.href = "https://www.tiktok.com/@argantarasja_"
-			}
-			
-		</script>
-	</body>
+    <footer>
+      <p class="title">&copy; ARGANTARA PROJECT 2025</p>
+    </footer>
+
+    <script>
+      function redirInstagram() {
+        window.location.href = "https://instagram.com/argantarasja_"
+      }
+
+      function redirTiktok() {
+        window.location.href = "https://www.tiktok.com/@argantarasja_"
+      }
+    </script>
+  </body>
 </html>
